--- a/config/config.json
+++ b/config/config.json
@@ -2,15 +2,15 @@
   "development": {
     "username": "salon",
     "password": "salon@2021",
-    "database": "logistics.db",
+    "database": "towtruckmove_db",
     "host": "localhost",
     "dialect": "postgres"
   },
   "production": {
-    "username": "trucktowmove_db_user",
-    "password": "ToGP6pF96EvXVE1jcF8K9Xoc2104tXbb",
+    "username": "trucktowmove_db_g6l5_user",
+    "password": "cr6uLJc6nCi0gyNcpf4nfnM3UWfSMSG8",
     "database": "trucktowmove_db",
-    "host": "dpg-cgqmtat269v32oa0a6i0-a",
+    "host": "dpg-con8gtq1hbls73fej16g-a",
     "dialect": "postgres",
     "dialectOptions": {
       "ssl": {
