--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "swagger-autogen": "node swagger.js"
   },
   "keywords": [],
@@ -40,6 +40,7 @@
     "path": "^0.12.7",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "react-geocode": "^0.2.3",
     "sequelize": "^6.6.5",
     "sharp": "^0.29.3",
     "socket.io": "^4.0.1",
